# QubeEngine

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  temp.pkl
examples/: basic_classification.py  benchmark.py  cancer_prediction.py  graph_descriptors.py  save_load_model.py
qube/: __init__.py  benchmark.py  classifier.py  cli.py  config.py  data.py  engine.py  selector.py  test.py  utils.py
qube_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.py  test_benchmark.py  test_cli.py  test_fit.py  test_import.py  test_pickle.py  test_predict.py  test_predict_proba.py  test_score.py
